[package]
name = "zasm"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
